[gd_scene load_steps=2 format=3 uid="uid://dltkp4lj8djle"]

[ext_resource type="Script" path="res://Action RPG Resources/Hurtboxes + Hitboxes/hurtbox.gd" id="1_japjb"]

[node name="Hurtbox" type="Area2D"]
visibility_layer = 9
script = ExtResource("1_japjb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="invicibility_ended" from="." to="." method="_on_invicibility_ended"]
[connection signal="invicibility_started" from="." to="." method="_on_invicibility_started"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
